	HTML help pages will be generated on request, resolving links
	by searching through the current .libPaths().

    o	help.start() no longer sets options(htmlhelp = TRUE) (it used
	to on Unix but not on Windows).  Nor does it on Unix reset the
	"browser" option if given an argument of that name.

	Arguments 'update' and 'remote' are now available on all
	platforms.

    o	help() has a new argument 'help_type' (with default set by the
	option of that name) to supersede 'offline', 'htmlhelp' and
	'chmhelp' (although for now they still work if 'help_type' is
	unset).  There is a new type, "PDF" to allow offline PDF
	(rather than PostScript).

	A function offline_help_helper() will be used if this exists
	in the workspace or further down the search path, otherwise
	the function of that name in the 'utils' name space.

    o	Plain text help is now used as the fallback for HTML help (as
	it always has been for Compiled HTML help on Windows).


DEPRECATED & DEFUNCT

    o	Bundles of packages are deprecated.  See 'Writing R
	Extensions' for the steps needed to unbundle a bundle.

    o	png(type="cairo1") is defunct: the value is no longer recognized.

    o	tools::Rd_parse() is defunct (as this version of R uses only
	Rd version 2).


INSTALLATION

    o	cairo >= 1.2 is now required (1.2.0 was released in July 2006)
	for cairo-based graphics devices (which remain optional).

    o	A suitable iconv() is now required: support for
	--without-iconv has been withdrawn (it was deprecated in R 2.5.0).

    o	Perl is no longer 'essential'.	R can be built without it, but
	scripts R CMD build, check, Rprof and Sd2d require it.

    o	A system 'glob' function is now essential (a working
	Sys.glob() has been assumed since R 2.9.0 at least).


INTERNATIONALIZATION

    o	There is some makefile support for adding/updating translations
	in packages: see po/README and 'Writing R Extensions'.

	There is support for the use of 'dngettext' for C-level